<resources>
    <string name="app_name">KeysAndroid</string>

    <string name="EnterA">Enter a:</string>
    <string name="EnterP">Enter p:</string>
    <string name="NumberUsers">Number users: %1$d</string>
    <string name="FindKeys">Find keys</string>

    <string name="DefaultA">37653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636376537438275367382463277623438732438654736437954938687568743664378687436876373654363637653743827536738246327762343873243865473643795493868756874366437868743687637365436363765374382753673824632776234387324386547364379549386875687436643786874368763736543636</string>
    <string name="DefaultP">131448118402119051411742181458433525596158405586569430700893278926563266835595367152379731914846816532768436326784927543784389745683456348765387436764385</string>
</resources>
