<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vb.keysandroid.MainActivity"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EnterA" />

    <EditText
        android:id="@+id/editTextA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/DefaultA"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EnterP" />

    <EditText
        android:id="@+id/editTextP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/DefaultP"
        android:inputType="number" />

    <TextView
        android:id="@+id/textViewNumberUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NumberUsers" />

    <SeekBar
        android:id="@+id/seekBarNumberUsers"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="15"
        android:progress="9" />

    <Button
        android:id="@+id/buttonFindKeys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FindKeys" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/loadingBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewKeys"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />
    </RelativeLayout>


</LinearLayout>
